tests/neg/parser_type_alias_missing_name.baa
// EXPECT: متوقع اسم بعد 'نوع'

نوع = صحيح.

صحيح الرئيسية() {
    إرجع ٠.
}
